# VulkanMemoryAllocator-Hpp

./: .gitmodules  CMakeLists.txt  Generate.java  README.md  VmaHppGenerator.cpp
.cache/clangd/index/: vk_mem_alloc.cppm.75C9F6CBA4B2AE37.idx  vk_mem_alloc.h.60C974FEEAB61B5B.idx  vk_mem_alloc.hpp.BDB1AFCBAF55E12C.idx  vk_mem_alloc_enums.hpp.ED45234758C8A14A.idx  vk_mem_alloc_funcs.hpp.5675A990581A8C8A.idx  vk_mem_alloc_handles.hpp.95A3CD2761EC6BF6.idx  vk_mem_alloc_structs.hpp.6C4E09C11DC552AE.idx
.github/workflows/: build.yml  generate.yml  release.yml
CppModule/: CMakeLists.txt  modules-example.cpp
include/: CMakeLists.txt  vk_mem_alloc.cppm  vk_mem_alloc.hpp  vk_mem_alloc_enums.hpp  vk_mem_alloc_funcs.hpp  vk_mem_alloc_handles.hpp  vk_mem_alloc_raii.hpp  vk_mem_alloc_raii_old.hpp  vk_mem_alloc_static_assertions.hpp  vk_mem_alloc_structs.hpp  vk_mem_alloc_validation.hpp
include2/: CMakeLists.txt  vk_mem_alloc.hpp  vk_mem_alloc_enums.hpp  vk_mem_alloc_funcs.hpp  vk_mem_alloc_handles.hpp  vk_mem_alloc_imported.hpp  vk_mem_alloc_raii.hpp  vk_mem_alloc_to_string.hpp  vk_mem_alloc_validation.hpp
samples/: CompileCheck.cpp  Init.cpp  InitRAII.cpp  common.hpp
src/: vk_mem_alloc.cppm
